now add new rules to the first place

--- a/files/default/ufw-new.conf
+++ b/files/default/ufw-new.conf
@@ -13,7 +13,7 @@ actionstop =
 
 actioncheck =
 
-actionban = ufw deny from <ip> to any port <port> proto <protocol>
+actionban = ufw insert 1 deny from <ip> to any port <port> proto <protocol>
 
 actionunban = ufw delete deny from <ip> to any port <port> proto <protocol>
 
